feat: update site title and description, enhance CreatePost component - Updated CreatePost component to use a ref for file input, allowing for easier file reset after submission. - Modified navigation link text to "oustKotek.com". - Adjusted file input handling for improved user experience.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>form-vault-legal</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>OustKotek</title>
+    <meta name="description" content="OustKotek" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="form-vault-legal" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="OustKotek" />
+    <meta property="og:description" content="OustKotek" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
